# telim-swap

./: .gitattributes  .gitignore  Makefile  README.md  create_mar.sh  docker-compose.yml  main.py  pyproject.toml  serve_models.sh  ts-config.properties
docker/: backend.dockerfile  base.dockerfile  net-api.dockerfile  pull-mar.sh
env/: env.env
models_backend/neural_style_model/: archive.sh  contract.py  handler.py  model.py  neural_style_utils.py
models_backend/resgan/: archive.sh  fix.py  handler.py  model.py
modelstore/: dcgan_fashiongen.mar  resgan.mar  vgg19.mar
notebooks/: Real_ESRGAN.ipynb  Resize.ipynb  animate_dls.py  example.py  fix.py  mac_m1_mps.ipynb  neural-transfer.ipynb
readme/: dls-tg-bog.drawio
src/: animations.py  bot.py  di.py  dispatcher.py  form_states.py  main.py  settings.py
src/handlers/: admin.py  base.py  image.py  preferences.py  start.py  text.py
src/localisation/: language_coordinator.py  localisation.py
src/neural_net_clients/: base_neural_net.py  base_settings.py  errors.py  example.py  neural_manager.py  neural_net.py  res_gan.py
src/preferences/: language.py
src/storage/: preferences_storage.py
src/utils/: log.py  reflection.py
