[tool.poetry]
name = "telim-swap"
version = "0.1.0"
description = ""
authors = ["Ruslan Sirazhetdinov <ruslansir@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.20"
pydantic = "^1.9.1"
punq = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
