[tool.poetry]
name = "telim-swap"
version = "0.1.0"
description = ""
authors = ["Ruslan Sirazhetdinov <ruslansir@icloud.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
aiogram = "^2.20"
pydantic = "^1.9.1"
punq = "^0.6.2"
torchserve = "^0.6.0"
torch-model-archiver = "^0.6.0"
torch-workflow-archiver = "^0.2.4"
torch = "^1.11.0"
torchvision = "^0.12.0"
requests = "^2.28.0"
jupyter = "^1.0.0"
matplotlib = "^3.5.2"
opencv-python = "^4.6.0"
basicsr = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
